cabal-version:      3.4
name:               keyboard
version:            0.1.0.0
build-type: Simple

-- A short (one-line) description of the package.
synopsis: Virtual keyboard in Haskell

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports: https://github.com/Chaman-veteran/keyboard

-- The license under which the package is released.
license: MIT

-- The package author(s).
author: Nathan Maillet

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable keyboard
    main-is:    Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        spell-checker:spell-checker-lib,
        spell-checker:spell-checker-interface,
        base        ^>= 4.15.1.0,
        gi-gtk	    ^>= 4.0.8,
        text        ^>= 1.2.5.0,
        gi-gio      ^>= 2.0.32,
        haskell-gi-base ^>= 0.26.4,
        bytestring  ^>= 0.10.12.1,
        vector      ^>= 0.13.1.0,
        serialise   ^>= 0.2.6.1,
        aeson       ^>= 2.2.1.0

    hs-source-dirs:   src
    default-language: Haskell2010
